--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "http://localhost:4000",
+  "proxy": "https://mern-portfolio-mocha.vercel.app",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.2",
