fixed try to deploy

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,16 @@
 {
   "version": 2,
+  "name": "portfolio",
   "builds": [
     {
-      "src": "index.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/server.js"
     }
   ]
 }
